# chess-engines-class

./: README.md  hw1_errata.md  rust_resources.md  syllabus.md
final/: README.md  final.md  menu.md
hw1/: Cargo.toml  README.md
hw1/src/: lib.rs  main.rs
hw2/: Cargo.toml  README.md
hw2/src/: bitboard.rs  board.rs  castling.rs  color.rs  direction.rs  lib.rs  magic.rs  main.rs  moves.rs  piece.rs  square.rs
hw2/src/movegen/: mod.rs  tests.rs
hw3/: Cargo.toml  README.md
hw3/src/: lib.rs
hw3/src/base/: bitboard.rs  board.rs  castling.rs  color.rs  direction.rs  game.rs  magic.rs  mod.rs  moves.rs  piece.rs  square.rs  zobrist.rs
hw3/src/base/movegen/: mod.rs
hw3/src/engine/: mod.rs  pick.rs  search.rs
hw3/src/engine/evaluate/: material.rs  mod.rs  pst.rs
hw4/: Cargo.toml  README.md
hw4/src/: lib.rs
hw4/src/base/: bitboard.rs  board.rs  castling.rs  color.rs  direction.rs  game.rs  magic.rs  mod.rs  moves.rs  piece.rs  square.rs  zobrist.rs
hw4/src/base/movegen/: mod.rs  tests.rs
hw4/src/engine/: limit.rs  mod.rs  pick.rs  search.rs  thread.rs  time.rs  transposition.rs
hw4/src/engine/evaluate/: material.rs  mod.rs  pst.rs
hw4/src/engine/uci/: mod.rs  send.rs
lectures/01_syllabus/: 01_syllabus.md  qz01_syllabus.md
lectures/02_rust/: 02_rust.md  lec02_notes.md  lec02_rust.md  qz02.md
lectures/03_bitboards_representation/: lec03_bitboards_representation  lec03_notes.md  qz03.md
lectures/04_movegen/: lec04_notes.md  qz04.md
lectures/05_movegen2/: qz05.md
lectures/06_search/: lec06_notes.md  qz06.md
lectures/07_search2/: qz07.md
lectures/08_tuning/: qz08.md
lectures/09_nnue/: qz08.md
lectures/10_mcts/: qz10.md
