# Tomato, a UCI-compatible chess engine.
# Copyright (C) 2022 Clayton Ramsey.

# Tomato is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# Tomato is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "tomato"
version = "0.1.0"
edition = "2021"
authors = ["Clayton Ramsey"]
default-run = "tomato"

[dependencies]
# Random number generator for creating magic bitboards.
fastrand = "1.8"
# Lazy initializer for magic table. 
once_cell = "1.17"
# More efficient hash map for move repetition checking.
nohash-hasher = "0.2"

[profile.test]
debug = true
# must be highly optimized for speed, since searching and perft is done in tests
opt-level = 3 
# lto = true

[profile.release]
opt-level = 3
strip = true
lto = true
overflow-checks = false
panic = "abort"
codegen-units = 1